Does not compile: Initial attempt to add 16 bit GrayScale support
Does not compile!  errors like this one show up.
C:\Ram\edu\rust\projects\image\./src\dynimage.rs:131:15: 131:24 error:
the trait `color::FromColor<color::Luma<u16>>` is not implemented for
the type `color::Rgb<u8>` [E0277]
C:\Ram\edu\rust\projects\image\./src\dynimage.rs:131
p.convert()

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,11 +36,12 @@ version = "0.3"
 optional = true
 
 [features]
-default = ["gif_codec", "jpeg", "png_codec", "ppm", "tga", "tiff", "webp", "bmp"]
+default = ["gif_codec", "jpeg",  "ppm", "tga", "tiff", "webp", "bmp"] 
+# "png_codec",
 
 gif_codec = ["gif"]
 jpeg = []
-png_codec = ["png"]
+# png_codec = ["png"]
 ppm = []
 tga = []
 tiff = []
